// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrugListCell should  match snapshot 1`] = `
<div>
  <div
    class="drug-order-details"
  >
    <div
      class="order-details"
    >
      <div
        class="drug-name-container"
      >
        <span
          class="bx--tooltip--definition bx--tooltip--a11y name-tooltip"
        >
          <button
            aria-describedby="definition-tooltip-1"
            class="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
            type="button"
          >
            <div
              class="drug-chart-drug-name"
            >
              Amoxicillin/Clavulanic Acid  125 mg/31.25 mg/5 mL Powder for Oral Suspension
            </div>
          </button>
          <span
            class="bx--assistive-text"
            id="definition-tooltip-1"
            role="tooltip"
          >
            Amoxicillin/Clavulanic Acid  125 mg/31.25 mg/5 mL Powder for Oral Suspension
          </span>
        </span>
         
        <div>
          TooltipCarbon
        </div>
      </div>
      <div>
        10mg
         - Topical
         -  5 Day(s)
      </div>
      <div />
    </div>
    <div
      class="medication-tags"
    >
      <div
        class="bx--tag bx--tag--sm bx--tag--blue"
        id="tag-1"
      >
        
        <span
          title="Rx"
        >
          Rx
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DrugListCell should  match snapshot for drug cell with admin info status as Administered 1`] = `
<div>
  <div
    class="drug-order-details"
  >
    <div
      class="order-details"
    >
      <div
        class="drug-name-container"
      >
        <span
          class="bx--tooltip--definition bx--tooltip--a11y name-tooltip"
        >
          <button
            aria-describedby="definition-tooltip-4"
            class="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
            type="button"
          >
            <div
              class="drug-chart-drug-name"
            >
              Combintation Chlorpheniramine, Paracetamol and Pseudophedrine 100 mL Syrup (Cough and Cold Syrup)
            </div>
          </button>
          <span
            class="bx--assistive-text"
            id="definition-tooltip-4"
            role="tooltip"
          >
            Combintation Chlorpheniramine, Paracetamol and Pseudophedrine 100 mL Syrup (Cough and Cold Syrup)
          </span>
        </span>
         
        <div>
          TooltipCarbon
        </div>
      </div>
      <div>
        10ml
         - Oral
         -  10 Day(s)
      </div>
      <div>
        <div
          class="administration-details"
        >
          <span
            class="bx--tooltip--definition bx--tooltip--a11y administration-details-tooltip"
          >
            <button
              aria-describedby="definition-tooltip-5"
              class="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--top bx--tooltip--align-start"
              type="button"
            >
              <div
                class="administration-time-info"
              >
                <test-file-stub
                  classname="clock-icon"
                />
                <span
                  style="color: rgb(82, 82, 82);"
                >
                  08:30
                </span>
              </div>
            </button>
            <span
              class="bx--assistive-text"
              id="definition-tooltip-5"
              role="tooltip"
            >
              08:30
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="medication-tags"
    >
      <div
        class="bx--tag bx--tag--sm bx--tag--blue"
        id="tag-3"
      >
        
        <span
          title="Rx"
        >
          Rx
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DrugListCell should  match snapshot for for drug cell with admin info status as Administered-Late 1`] = `
<div>
  <div
    class="drug-order-details"
  >
    <div
      class="order-details"
    >
      <div
        class="drug-name-container"
      >
        <span
          class="bx--tooltip--definition bx--tooltip--a11y name-tooltip"
        >
          <button
            aria-describedby="definition-tooltip-2"
            class="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
            type="button"
          >
            <div
              class="drug-chart-drug-name"
            >
              Combintation Chlorpheniramine, Paracetamol and Pseudophedrine 100 mL Syrup (Cough and Cold Syrup)
            </div>
          </button>
          <span
            class="bx--assistive-text"
            id="definition-tooltip-2"
            role="tooltip"
          >
            Combintation Chlorpheniramine, Paracetamol and Pseudophedrine 100 mL Syrup (Cough and Cold Syrup)
          </span>
        </span>
         
        <div>
          TooltipCarbon
        </div>
      </div>
      <div>
        10ml
         - Oral
         -  10 Day(s)
      </div>
      <div>
        <div
          class="administration-details"
        >
          <span
            class="bx--tooltip--definition bx--tooltip--a11y administration-details-tooltip"
          >
            <button
              aria-describedby="definition-tooltip-3"
              class="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--top bx--tooltip--align-start"
              type="button"
            >
              <div
                class="administration-time-info"
              >
                <test-file-stub
                  classname="clock-icon"
                />
                <span
                  style="color: rgb(255, 0, 0);"
                >
                  02:30
                </span>
              </div>
            </button>
            <span
              class="bx--assistive-text"
              id="definition-tooltip-3"
              role="tooltip"
            >
              02:30
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="medication-tags"
    >
      <div
        class="bx--tag bx--tag--sm bx--tag--blue"
        id="tag-2"
      >
        
        <span
          title="Rx"
        >
          Rx
        </span>
      </div>
    </div>
  </div>
</div>
`;
